# ngit-cli

./: .gitignore  .gitlint  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  config.toml  flake.nix  maintainers.yaml  planning.md  rustfmt.toml
.github/workflows/: build_test.yaml  check_rustfmt_clippy.yaml  check_test_rustfmt_clippy.yaml  clippy_rustfmt_test.yaml  release.yml
.ngit/act/workflows/: clippy_rustfmt_test.yaml
docs/architecture/: maintainer-model.md  test-harness-migration.md  test-harness.md
git_hooks/: pre-commit  pre-push
nostr_git_remote_helper/: Cargo.toml
nostr_git_remote_helper/src/: main.rs
nostr_git_remote_helper/src/sub_commands/: capabilities.rs  mod.rs  placeholder.rs
skills/ngit/: SKILL.md
src/: branch_refs.rs  cli.rs  cli_helpers.rs  cli_interactor.rs  client.rs  config.rs  fetch_pull_push.rs  git.rs  git_remote_helper.rs  kind.rs  login.rs  main.rs  merge.rs  ngit_tag.rs  patch.rs  pull_request.rs  repo_config.rs  repo_ref.rs  repo_state.rs  utils.rs
src/funcs/: apply_patches.rs  checkout_branch.rs  create_branch_and_pr.rs  create_local_branch_from_user_input.rs  create_patches.rs  find_commits_ahead.rs  find_latest_patch.rs  find_select_recent_repos.rs  get_branch_event_from_user_input.rs  get_updates_of_patches.rs  mod.rs
src/groups/: group.rs  groups.rs  init.rs  mod.rs
src/key_handling/: encryption.rs  mod.rs  users.rs
src/lib/: accept_maintainership.rs  cli_interactor.rs  client.rs  content_tags.rs  fetch.rs  git_events.rs  list.rs  mbox_parser.rs  mod.rs  push.rs  repo_ref.rs  repo_state.rs  signer.rs  transport.rs  utils.rs  version_check.rs
src/lib/git/: identify_ahead_behind.rs  mod.rs  nostr_url.rs  remote_helper.rs  test_helpers.rs  utils.rs
src/lib/login/: existing.rs  fresh.rs  key_encryption.rs  mod.rs  user.rs
src/repos/: init.rs  mod.rs  repo.rs
src/sub_commands/: change_user.rs  claim.rs  clone.rs  fetch.rs  init.rs  list.rs  login.rs  merge.rs  mod.rs  prs.rs  pull.rs  push.rs  rebroadcast.rs  repo_ref.rs  send.rs
src/sub_commands/prs/: create.rs  list.rs  mod.rs
test_harness/: Cargo.toml
test_harness/src/: clock.rs  grasp.rs  harness.rs  lib.rs  nostr.rs  port.rs  query.rs  relay.rs  repo.rs  scenarios.rs  snapshot.rs  vanilla_git_server.rs
test_utils/: Cargo.toml
test_utils/src/: git.rs  lib.rs  relay.rs
tests/: account_create.rs  capture_event_shapes.rs  claim.rs  clone_grasp.rs  clone_remote_helper.rs  fetch_failover_grasp.rs  fetch_grasp.rs  fetch_proposal.rs  git_push_merge.rs  git_push_state.rs  git_remote_helper.rs  init.rs  init_grasp.rs  init_preserves_unknown_tags.rs  init_state_co_maintainer.rs  init_state_coordinate_only.rs  init_state_fresh.rs  init_state_my_announcement.rs  init_state_not_listed.rs  list.rs  list_patch.rs  list_pr.rs  list_state.rs  login.rs  merge.rs  ngit_init.rs  ngit_list.rs  ngit_login.rs  ngit_pr_checkout.rs  ngit_pull.rs  ngit_push.rs  ngit_send.rs  pr_checkout.rs  pr_checkout_patch.rs  prs_create.rs  prs_list.rs  pull.rs  push.rs  send.rs  send_grasp.rs  (+13 more)
tests/git_push_pr/: ff_update.rs  force_update_stale_origin_main.rs  main.rs  new_pr.rs  new_pr_custom_subject_desc.rs  patch_kind_when_no_grasp.rs  patch_update.rs  patch_update_force.rs  patch_update_force_to_pr.rs  patch_update_to_pr.rs  rebase_update.rs
tests/git_push_state/: add_branch.rs  all_servers_down.rs  auto_accept_maintainership.rs  clone_interact_tag.rs  delete_branch.rs  fresh_repo.rs  grasp_accepts_remaining_relay_down.rs  main.rs  push_tag.rs
tests/git_remote_nostr/: fetch.rs  list.rs  main.rs  push.rs
tests/legacy/: ngit_init.rs  ngit_send.rs
tests/legacy/git_remote_nostr/: fetch.rs  list.rs  main.rs  push.rs
tests/ngit/: list.rs  login.rs  main.rs  push.rs  send.rs
