[package]
name = "ngit"
version = "1.6.0"
edition = "2021"
description = "nostr plugin for git"
authors = ["DanConwayDev <DanConwayDev@protonmail.com>"]
readme = "README.md"
homepage = "https://gitworkshop.dev/r/naddr1qqzxuemfwsqs6amnwvaz7tmwdaejumr0dspzpgqgmmc409hm4xsdd74sf68a2uyf9pwel4g9mfdg8l5244t6x4jdqvzqqqrhnym0k2qj"
repository = "https://codeberg.org/DanConwayDev/ngit-cli"
license = "MIT"
keywords = ["nostr", "git"]
categories = ["command-line-utilities","development-tools"]

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.73"
auth-git2 = "0.5.4"
chacha20poly1305 = "0.10.1"
clap = { version = "4.3.19", features = ["derive"] }
console = "0.15.7"
dialoguer = "0.10.4"
directories = "5.0.1"
futures = "0.3.28"
git2 = "0.20.2"
indicatif = "0.17.7"
keyring = "2.0.5"
nostr = { version = "0.41.0", features = ["nip05", "nip49"] }
nostr-connect = "0.41.0"
nostr-database = "0.41.0"
nostr-lmdb = "0.41.0"
nostr-relay-pool = "0.41.0"
nostr-sdk = "0.41.0"
passwords = "3.1.13"
qrcode = { version = "0.14.1", default-features = false }
scrypt = "0.11.0"
serde = { version = "1.0.181", features = ["derive"] }
serde_json = "1.0.105"
serde_yaml = "0.9.27"
tokio = { version = "1.40.0", features = ["full"] }
urlencoding = "2.1.3"
zeroize = "1.6.0"

[dev-dependencies]
assert_cmd = "2.0.12"
duplicate = "1.0.0"
mockall = "0.11.4"
once_cell = "1.18.0"
serial_test = "2.0.0"
test_utils = { path = "test_utils" }

[workspace]
members = [
    "test_utils",
]

[lib]
name = "ngit"
path = "src/lib/mod.rs"

[[bin]]
name = "ngit"
path = "src/bin/ngit/main.rs"

[[bin]]
name = "git-remote-nostr"
path = "src/bin/git_remote_nostr/main.rs"
