[package]
name = "test_harness"
version = "0.1.0"
edition = "2021"
publish = false
description = "Integration test harness for ngit."

[dependencies]
anyhow = "1.0.98"
git2 = "0.21.0"
http-body-util = "0.1"
hyper = { version = "1.4", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio", "server", "http1"] }
nostr = "0.45.0-alpha.2"
nostr-relay-builder = "0.45.0-alpha.2"
nostr-sdk = "0.45.0-alpha.2"
tempfile = "3.10"
tokio = { version = "1.52.3", features = ["full"] }
