[package]
name = "test_utils"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
assert_cmd = "2.0.12"
dialoguer = "0.10.4"
directories = "5.0.1"
futures = "0.3.28"
git2 = "0.19.0"
nostr = { git = "https://github.com/rust-nostr/nostr", rev = "4dbfa94" }
nostr-database = { git = "https://github.com/rust-nostr/nostr", rev = "4dbfa94" }
nostr-sdk = { git = "https://github.com/rust-nostr/nostr", rev = "4dbfa94" }
nostr-sqlite = { git = "https://github.com/rust-nostr/nostr", rev = "4dbfa94" }
once_cell = "1.18.0"
rand = "0.8"
rexpect = { git = "https://github.com/rust-cli/rexpect.git", rev = "9eb61dd" }
simple-websockets = { git = "https://github.com/DanConwayDev/simple-websockets", branch= "auto-release-port" }
strip-ansi-escapes = "0.2.0"
tokio = "1.33.0"
tungstenite = "0.20.1"
