[package]
name = "test_utils"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
assert_cmd = "2.0.17"
dialoguer = "0.11.0"
directories = "6.0.0"
futures = "0.3.31"
git2 = "0.20.2"
nostr = "0.42.2"
nostr-database = "0.42.0"
nostr-lmdb = "0.42.0"
nostr-sdk = "0.42.0"
once_cell = "1.21.3"
rand = "0.9"
rexpect = { git = "https://github.com/rust-cli/rexpect.git", rev = "9eb61dd" }
simple-websockets = { git = "https://github.com/DanConwayDev/simple-websockets", branch= "auto-release-port" }
strip-ansi-escapes = "0.2.1"
tokio = { version = "1.46.1", features = ["full"] }
tungstenite = "0.27.0"
sha2 = "0.10"
